# Munshi

./: .env  Cargo.toml
schema/: ddl.sql
src/: main.rs
src/api/: api.rs
src/config/: mod.rs
src/data/: mod.rs  model.rs  rest_api.rs  source_model.rs
src/db/: error.rs  mod.rs  model.rs  scylladb.rs
src/payload/: payload.rs
