[package]
name = "config_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
color-eyre = "0.6"
config = "0.11"
scylla = "0.6"
dotenv = "0.15"
uuid = { version = "1.1.2", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }